deployments/applications/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: applications
  labels:
    app: vaultwarden
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: websocket
      port: 3012
      targetPort: 3012
      protocol: TCP
  selector:
    app: vaultwarden
